fixing MPS-27139 MPS needs classes from rt.jar that are missing/renamed in JDK 1.9: don't use IClassPathItem on compilation, ClassPathItem is for classloading only (preparing to get rid of class path items)